# SynaptiConn

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  all_units.xlsx  api.html  contents.html  genindex.html  index.html  objects.inv  requirements.txt  requirements_dev.txt  requirements_docs.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  tox.ini
.doctrees/: api.doctree  contents.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
.github/workflows/: build.yml  docs.yml  docs_deploy.yml  tests.yml
_downloads/af9f1af2f4766d70b07be3e721bd8a98/: monosyn_testdata.ipynb
_downloads/e8698b6f21d0e191a04ab168c291dcbb/: monosyn_testdata.py
_modules/: index.html
auto_examples/: index.html  sg_execution_times.html
auto_examples/analyses/: index.html  monosyn_testdata.html  sg_execution_times.html
docs/: api.rst  conf.py  contents.rst  index.rst
docs/_static/: custom.css
docs/img/: synapti_conn_logo.ai  synapti_conn_logo_v2.ai  synapti_conn_logo_v3.ai
examples/: README.txt
examples/analyses/: README.txt  monosyn_spiketrains_phy.ipynb  monosyn_testdata.ipynb  monosyn_testdata.py
examples/batch_processing/: README.txt  monosyn_spiketrains_phy.ipynb
examples/plots/: plot_spiketrains.ipynb  plot_spiketrains_phy.ipynb
examples/test_datasets/: README.txt  monosyn_testdata.ipynb
synapticonn/: __init__.py  version.py
tests/: BD0187_spikesorting_array.pkl  all_unit.mat  test_loader.py  tutils.py
(+52 files in other folders)
